# mcp_tutorial

./: .flake8  .gitignore  .pre-commit-config.yaml  MCP dev instructions  README.md  pyproject.toml  requirements.txt
.uv/: config.toml
src/section_1/: README.md  architecture.md  hello_mcp.py  introduction.md  setup.py
src/section_2/: README.md  basic_server.py  run_basic_client.sh  run_basic_server.sh  run_client.sh  run_server.sh  simple_client.py  weather_client.py  weather_server.py
